SWATCH-5085: Removal of decommissioned IT Product Service UMB consumer